--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     background-color: var(--body-background);
 }
 
-.container{
+main .container{
     background-color: var(--card-color);
     height: 29rem;
     width: 18rem;
@@ -57,13 +57,9 @@ body{
     font-family: 'Outfit', sans-serif;
 }
 
-.attribution { 
+footer .attribution { 
     font-size: 15px; text-align: center;
 }
-.attribution a {
+footer .attribution a {
     color: hsl(228, 45%, 44%);
-}
-
-@media screen {
-    
 }
